--- a/about-philanthropy.html
+++ b/about-philanthropy.html
@@ -215,7 +215,7 @@
 					</h3>
 					<p>Through this program, Oaktree and its employees are able to dedicate their time and resources to numerous meaningful and much-needed community initiatives across the globe.</p>
 				</div>
-				<div class="img-wrapper"><img src="content/quote-5.jpg" alt=""></div>
+				<div class="img-wrapper play-video" data-video='{"video": "videos/1030796531-hd.mp4", "mimetype": "video/mp4"}'><img src="content/quote-5.jpg" alt=""></div>
 			</div>
 		</div>
 
