--- a/home.html
+++ b/home.html
@@ -189,7 +189,7 @@
 						<div class="img-wrapper">
 							<img src="content/content-1.jpg" alt="">
 							<!-- <video autoplay="false" controls=""false loop="loop" muted="muted" playsinline="playsinline" src="videos/1030796531-hd.mov" type="video/quicktime"></video> -->
-							<video autoplay="false" controls=""false loop="loop" muted="muted" playsinline="playsinline">
+							<video autoplay="false" controls="false" loop="loop" muted="muted" playsinline="playsinline">
 								<source src="videos/1030796531-hd.mp4" type="video/mp4">
 							</video>
 						</div>
