--- a/about-people-nophoto.html
+++ b/about-people-nophoto.html
@@ -16,6 +16,7 @@
 
 		<script type="text/javascript" src="js/lib/jquery-3.6.0.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/jquery-ui.min.js" defer></script>
+		<script type="text/javascript" src="js/lib/jquery.scrollbar.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/owl.carousel.min.js" defer></script>
 		<script type="text/javascript" src="js/main.js?v=1" defer></script>
 
