--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
 
 		<script type="text/javascript" src="js/lib/jquery-3.6.0.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/jquery-ui.min.js" defer></script>
+		<script type="text/javascript" src="js/lib/jquery.scrollbar.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/chart.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/chartjs-plugin-datalabels.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/odometer.min.js" defer></script>
