--- a/about.html
+++ b/about.html
@@ -345,7 +345,9 @@
 							<div class="asset-wrap">
 								<h6>Assets Under Management<sup>3, 4</sup></h6>
 								
-								<canvas class="doughnut-chart mobile" width="330" height="330" data-chart='[{"id": "Public Funds","value": "22"},{"id": "Insurance\nCompanies","value": "13"},{"id": "Corporate\nPensions","value": "11"},{"id": "Sovereign\nWealth Funds","value": "10"},{"id": "Intermediary\nDistribution","value": "9"},{"id": "Private - HNW/\nFamily Offices","value": "8"},{"id": "Oaktree and\nAffiliates","value": "5"},{"id": "Corporate","value": "5"},{"id": "Endowments/\nFoundations","value": "4"},{"id": "Fund of Funds","value": "4"},{"id": "Unions","value": "2"},{"id": "Other","value": "7"}]'></canvas>
+								<div class="canvas-wrapper">
+									<canvas class="doughnut-chart mobile" width="330" height="330" data-chart='[{"id": "Public Funds","value": "22"},{"id": "Insurance\nCompanies","value": "13"},{"id": "Corporate\nPensions","value": "11"},{"id": "Sovereign\nWealth Funds","value": "10"},{"id": "Intermediary\nDistribution","value": "9"},{"id": "Private - HNW/\nFamily Offices","value": "8"},{"id": "Oaktree and\nAffiliates","value": "5"},{"id": "Corporate","value": "5"},{"id": "Endowments/\nFoundations","value": "4"},{"id": "Fund of Funds","value": "4"},{"id": "Unions","value": "2"},{"id": "Other","value": "7"}]'></canvas>
+								</div>
 
 								<ul>
 									<li>Public Funds 22%</li>
@@ -372,7 +374,10 @@
 							<div class="asset-wrap">
 								<h6>Assets Under Management<sup>3, 4</sup></h6>
 
-								<canvas class="doughnut-chart mobile" width="330" height="330" data-chart='[{"id": "Public Funds","value": "22"},{"id": "Insurance\nCompanies","value": "13"},{"id": "Corporate\nPensions","value": "11"},{"id": "Sovereign\nWealth Funds","value": "10"},{"id": "Intermediary\nDistribution","value": "9"},{"id": "Private - HNW/\nFamily Offices","value": "8"},{"id": "Oaktree and\nAffiliates","value": "5"},{"id": "Corporate","value": "5"},{"id": "Endowments/\nFoundations","value": "4"},{"id": "Fund of Funds","value": "4"},{"id": "Unions","value": "2"},{"id": "Other","value": "7"}]'></canvas>
+								<div class="canvas-wrapper">
+									<canvas class="doughnut-chart mobile" width="330" height="330" data-chart='[{"id": "Public Funds","value": "22"},{"id": "Insurance\nCompanies","value": "13"},{"id": "Corporate\nPensions","value": "11"},{"id": "Sovereign\nWealth Funds","value": "10"},{"id": "Intermediary\nDistribution","value": "9"},{"id": "Private - HNW/\nFamily Offices","value": "8"},{"id": "Oaktree and\nAffiliates","value": "5"},{"id": "Corporate","value": "5"},{"id": "Endowments/\nFoundations","value": "4"},{"id": "Fund of Funds","value": "4"},{"id": "Unions","value": "2"},{"id": "Other","value": "7"}]'></canvas>
+								</div>
+
 								<ul>
 									<li>Public Funds 22%</li>
 									<li>Insurance Companies 13%</li>
@@ -399,7 +404,9 @@
 							<div class="asset-wrap">
 								<h6>Assets Class Mix<sup>3, 4</sup></h6>
 
-								<canvas class="doughnut-chart mobile" width="330" height="330" data-chart='[{"id": "Credit", "value": "68"},{"id": "Real Assets", "value": "14"},{"id": "Private Equity", "value": "11"},{"id": "Listed Equities", "value": "7"}]'></canvas>
+								<div class="canvas-wrapper">
+									<canvas class="doughnut-chart mobile" width="330" height="330" data-chart='[{"id": "Credit", "value": "68"},{"id": "Real Assets", "value": "14"},{"id": "Private Equity", "value": "11"},{"id": "Listed Equities", "value": "7"}]'></canvas>
+								</div>
 
 								<ul>
 									<li>Credit 68%</li>
