people slider fixes

--- a/about-people-nophoto.html
+++ b/about-people-nophoto.html
@@ -229,7 +229,7 @@
 								<span class="insight-type article"></span>
 							</a>
 						</div>
-						<div class="insights-type">articles</div>
+						<a href="" class="insights-type">articles</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">Is Anything on Sale? Top Five Takeaways From Oaktree’s Global Credit Panel</a>
 						<a href="" class="read-more link-underline">Read More</a>
@@ -241,7 +241,7 @@
 								<span class="insight-type video"></span>
 							</a>
 						</div>
-						<div class="insights-type">videos</div>
+						<a href="" class="insights-type">videos</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">Is Anything on Sale? Discussing Today’s Global Credit Markets</a>
 						<a href="" class="read-more link-underline">Watch Video</a>
@@ -253,7 +253,7 @@
 								<span class="insight-type article"></span>
 							</a>
 						</div>
-						<div class="insights-type">article</div>
+						<a href="" class="insights-type">article</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">Direct Lending: Benefits, Risks and Opportunities</a>
 						<a href="" class="read-more link-underline">Read More</a>
@@ -266,7 +266,7 @@
 								<span class="insight-type article"></span>
 							</a>
 						</div>
-						<div class="insights-type">articles</div>
+						<a href="" class="insights-type">articles</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">Is Anything on Sale? Top Five Takeaways From Oaktree’s Global Credit Panel</a>
 						<a href="" class="read-more link-underline">Read More</a>
@@ -278,7 +278,7 @@
 								<span class="insight-type video"></span>
 							</a>
 						</div>
-						<div class="insights-type">videos</div>
+						<a href="" class="insights-type">videos</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">Is Anything on Sale? Discussing Today’s Global Credit Markets</a>
 						<a href="" class="read-more link-underline">Watch Video</a>
@@ -290,7 +290,7 @@
 								<span class="insight-type article"></span>
 							</a>
 						</div>
-						<div class="insights-type">article</div>
+						<a href="" class="insights-type">article</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">Direct Lending: Benefits, Risks and Opportunities</a>
 						<a href="" class="read-more link-underline">Read More</a>
