--- a/about-people.html
+++ b/about-people.html
@@ -230,7 +230,7 @@
 								<span class="insight-type article"></span>
 							</a>
 						</div>
-						<div class="insights-type">articles</div>
+						<a href="" class="insights-type">articles</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">Is Anything on Sale? Top Five Takeaways From Oaktree’s Global Credit Panel</a>
 						<a href="" class="read-more link-underline">Read More</a>
@@ -242,7 +242,7 @@
 								<span class="insight-type video"></span>
 							</a>
 						</div>
-						<div class="insights-type">videos</div>
+						<a href="" class="insights-type">videos</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">Is Anything on Sale? Discussing Today’s Global Credit Markets</a>
 						<a href="" class="read-more link-underline">Watch Video</a>
@@ -254,7 +254,7 @@
 								<span class="insight-type article"></span>
 							</a>
 						</div>
-						<div class="insights-type">article</div>
+						<a href="" class="insights-type">article</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">Direct Lending: Benefits, Risks and Opportunities</a>
 						<a href="" class="read-more link-underline">Read More</a>
@@ -267,7 +267,7 @@
 								<span class="insight-type article"></span>
 							</a>
 						</div>
-						<div class="insights-type">articles</div>
+						<a href="" class="insights-type">articles</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">Is Anything on Sale? Top Five Takeaways From Oaktree’s Global Credit Panel</a>
 						<a href="" class="read-more link-underline">Read More</a>
@@ -279,7 +279,7 @@
 								<span class="insight-type video"></span>
 							</a>
 						</div>
-						<div class="insights-type">videos</div>
+						<a href="" class="insights-type">videos</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">Is Anything on Sale? Discussing Today’s Global Credit Markets</a>
 						<a href="" class="read-more link-underline">Watch Video</a>
@@ -291,7 +291,7 @@
 								<span class="insight-type article"></span>
 							</a>
 						</div>
-						<div class="insights-type">article</div>
+						<a href="" class="insights-type">article</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">Direct Lending: Benefits, Risks and Opportunities</a>
 						<a href="" class="read-more link-underline">Read More</a>
