--- a/about-philanthropy.html
+++ b/about-philanthropy.html
@@ -268,7 +268,7 @@
 								<span class="insight-type video"></span>
 							</a>
 						</div>
-						<div class="insights-type">videos</div>
+						<a href="" class="insights-type">videos</a>
 						<div class="date">jul 15, 2021</div>
 						<a href="" class="title-link">Racial and Social Justice</a>
 						<a href="" class="read-more link-underline">Watch Video</a>
@@ -280,7 +280,7 @@
 								<span class="insight-type video"></span>
 							</a>
 						</div>
-						<div class="insights-type">videos</div>
+						<a href="" class="insights-type">videos</a>
 						<div class="date">jul 22, 2021</div>
 						<a href="" class="title-link">COVID-19 Relief</a>
 						<a href="" class="read-more link-underline">Watch Video</a>
@@ -292,7 +292,7 @@
 								<span class="insight-type video"></span>
 							</a>
 						</div>
-						<div class="insights-type">videos</div>
+						<a href="" class="insights-type">videos</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">Food from the Heart</a>
 						<a href="" class="read-more link-underline">Watch Video</a>
@@ -305,7 +305,7 @@
 								<span class="insight-type video"></span>
 							</a>
 						</div>
-						<div class="insights-type">videos</div>
+						<a href="" class="insights-type">videos</a>
 						<div class="date">jul 15, 2021</div>
 						<a href="" class="title-link">Racial and Social Justice</a>
 						<a href="" class="read-more link-underline">Watch Video</a>
@@ -317,7 +317,7 @@
 								<span class="insight-type video"></span>
 							</a>
 						</div>
-						<div class="insights-type">videos</div>
+						<a href="" class="insights-type">videos</a>
 						<div class="date">jul 22, 2021</div>
 						<a href="" class="title-link">COVID-19 Relief</a>
 						<a href="" class="read-more link-underline">Watch Video</a>
@@ -329,7 +329,7 @@
 								<span class="insight-type video"></span>
 							</a>
 						</div>
-						<div class="insights-type">videos</div>
+						<a href="" class="insights-type">videos</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">Food from the Heart</a>
 						<a href="" class="read-more link-underline">Watch Video</a>
