--- a/credit.html
+++ b/credit.html
@@ -353,7 +353,7 @@
 								<span class="insight-type article"></span>
 							</a>
 						</div>
-						<div class="insights-type">articles</div>
+						<a href="" class="insights-type">articles</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">Performing Credit Quarterly 1Q2021</a>
 						<a href="" class="read-more link-underline">Read More</a>
@@ -365,7 +365,7 @@
 								<span class="insight-type video"></span>
 							</a>
 						</div>
-						<div class="insights-type">articles</div>
+						<a href="" class="insights-type">articles</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">Performing Credit Quarterly 4Q2020</a>
 						<a href="" class="read-more link-underline">Read More</a>
@@ -377,7 +377,7 @@
 								<span class="insight-type article"></span>
 							</a>
 						</div>
-						<div class="insights-type">article</div>
+						<a href="" class="insights-type">article</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">Performing Credit Quarterly 3Q2020</a>
 						<a href="" class="read-more link-underline">Read More</a>
@@ -390,7 +390,7 @@
 								<span class="insight-type article"></span>
 							</a>
 						</div>
-						<div class="insights-type">articles</div>
+						<a href="" class="insights-type">articles</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">Performing Credit Quarterly 1Q2021</a>
 						<a href="" class="read-more link-underline">Read More</a>
@@ -402,7 +402,7 @@
 								<span class="insight-type video"></span>
 							</a>
 						</div>
-						<div class="insights-type">articles</div>
+						<a href="" class="insights-type">articles</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">Performing Credit Quarterly 4Q2020</a>
 						<a href="" class="read-more link-underline">Read More</a>
@@ -414,7 +414,7 @@
 								<span class="insight-type article"></span>
 							</a>
 						</div>
-						<div class="insights-type">article</div>
+						<a href="" class="insights-type">article</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">Performing Credit Quarterly 3Q2020</a>
 						<a href="" class="read-more link-underline">Read More</a>
