--- a/home.html
+++ b/home.html
@@ -278,7 +278,7 @@
 								<span class="insight-type article"></span>
 							</a>
 						</div>
-						<div class="insights-type">articles</div>
+						<a href="" class="insights-type">articles</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">Performing Credit Quarterly 1Q2021</a>
 						<a href="" class="read-more link-underline">Read More</a>
@@ -290,7 +290,7 @@
 								<span class="insight-type video"></span>
 							</a>
 						</div>
-						<div class="insights-type">videos</div>
+						<a href="" class="insights-type">videos</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">Insights Live: Life Sciences Direct Lending</a>
 						<a href="" class="read-more link-underline">Watch Video</a>
@@ -302,7 +302,7 @@
 								<span class="insight-type audio"></span>
 							</a>
 						</div>
-						<div class="insights-type">memos</div>
+						<a href="" class="insights-type">memos</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">The Rewind: Dare to Be Great II</a>
 						<a href="" class="read-more link-underline">Listen Here</a>
@@ -315,7 +315,7 @@
 								<span class="insight-type article"></span>
 							</a>
 						</div>
-						<div class="insights-type">articles</div>
+						<a href="" class="insights-type">articles</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">Performing Credit Quarterly 1Q2021</a>
 						<a href="" class="read-more link-underline">Read More</a>
@@ -327,7 +327,7 @@
 								<span class="insight-type video"></span>
 							</a>
 						</div>
-						<div class="insights-type">videos</div>
+						<a href="" class="insights-type">videos</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">Insights Live: Life Sciences Direct Lending</a>
 						<a href="" class="read-more link-underline">Watch Video</a>
@@ -339,7 +339,7 @@
 								<span class="insight-type audio"></span>
 							</a>
 						</div>
-						<div class="insights-type">memos</div>
+						<a href="" class="insights-type">memos</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">The Rewind: Dare to Be Great II</a>
 						<a href="" class="read-more link-underline">Listen Here</a>
