--- a/about-di.html
+++ b/about-di.html
@@ -475,7 +475,7 @@
 								<span class="insight-type article"></span>
 							</a>
 						</div>
-						<div class="insights-type">articles</div>
+						<a href="" class="insights-type">articles</a>
 						<div class="date">jul 15, 2021</div>
 						<a href="" class="title-link">Oaktree Capital chooses head of ESG</a>
 						<a href="" class="read-more link-underline">Read More</a>
@@ -487,7 +487,7 @@
 								<span class="insight-type video"></span>
 							</a>
 						</div>
-						<div class="insights-type">videos</div>
+						<a href="" class="insights-type">videos</a>
 						<div class="date">jul 22, 2021</div>
 						<a href="" class="title-link">Oaktree appoints Priya Prasad Bowe as Head of ESG. </a>
 						<a href="" class="read-more link-underline">Watch Video</a>
@@ -499,7 +499,7 @@
 								<span class="insight-type audio"></span>
 							</a>
 						</div>
-						<div class="insights-type">memos</div>
+						<a href="" class="insights-type">memos</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">An ESG Focus for EM Equities Investing</a>
 						<a href="" class="read-more link-underline">Listen Here</a>
@@ -512,7 +512,7 @@
 								<span class="insight-type article"></span>
 							</a>
 						</div>
-						<div class="insights-type">articles</div>
+						<a href="" class="insights-type">articles</a>
 						<div class="date">jul 15, 2021</div>
 						<a href="" class="title-link">Oaktree Capital chooses head of ESG</a>
 						<a href="" class="read-more link-underline">Read More</a>
@@ -524,7 +524,7 @@
 								<span class="insight-type video"></span>
 							</a>
 						</div>
-						<div class="insights-type">videos</div>
+						<a href="" class="insights-type">videos</a>
 						<div class="date">jul 22, 2021</div>
 						<a href="" class="title-link">Oaktree appoints Priya Prasad Bowe as Head of ESG. </a>
 						<a href="" class="read-more link-underline">Watch Video</a>
@@ -536,7 +536,7 @@
 								<span class="insight-type audio"></span>
 							</a>
 						</div>
-						<div class="insights-type">memos</div>
+						<a href="" class="insights-type">memos</a>
 						<div class="date">apr 4, 2021</div>
 						<a href="" class="title-link">An ESG Focus for EM Equities Investing</a>
 						<a href="" class="read-more link-underline">Listen Here</a>
