--- a/article-example.html
+++ b/article-example.html
@@ -201,7 +201,7 @@
 					<li><a href="https://www.twitter.com/oaktree" class="twitter"></a></li>
 					<li><a href="https://www.linkedin.com/company/oaktree-capital-management" class="linkedin"></a></li>
 					<li><a href="https://www.facebook.com/oaktreecapital" class="facebook"></a></li>
-					<li><a href="https://www.youtube.com/oaktreecapital" class="youtube"></a></li>
+					<li><a href="mailto:support@oaktreecapital.com" class="mail"></a></li>
 				</ul>
 			</div>
 
