change jquery version to 2.4.0 in order to work properly on safari

--- a/contact-us.html
+++ b/contact-us.html
@@ -16,7 +16,7 @@
 		<link rel="stylesheet" href="css/lib/jquery-ui.min.css">
 		<link rel="stylesheet" href="css/lib/datatables.min.css">
 
-		<script type="text/javascript" src="js/lib/jquery-3.6.0.min.js" defer></script>
+		<script type="text/javascript" src="js/lib/jquery.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/jquery-ui.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/jquery.scrollbar.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/owl.carousel.min.js" defer></script>
@@ -314,16 +314,6 @@
 		</div>
 
 		<div class="country-addresses-wrapper">
-			<div class="social-links-wrapper">
-				<span>Follow Us</span>
-				<ul class="social-links">
-					<li><a href="https://www.twitter.com/oaktree" class="twitter"></a></li>
-					<li><a href="https://www.linkedin.com/company/oaktree-capital-management" class="linkedin"></a></li>
-					<li><a href="https://www.facebook.com/oaktreecapital" class="facebook"></a></li>
-					<li><a href="https://www.youtube.com/oaktreecapital" class="youtube"></a></li>
-				</ul>
-			</div>
-
 			<div class="country-addresses-content">
 				<ul class="countries">
 					<li class="country">
