--- a/about-investment.html
+++ b/about-investment.html
@@ -16,7 +16,7 @@
 		<link rel="stylesheet" href="css/lib/jquery-ui.min.css">
 		<link rel="stylesheet" href="css/lib/datatables.min.css">
 
-		<script type="text/javascript" src="js/lib/jquery-3.6.0.min.js" defer></script>
+		<script type="text/javascript" src="js/lib/jquery.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/jquery-ui.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/jquery.scrollbar.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/owl.carousel.min.js" defer></script>
