--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.typekit.net/hrc2dds.css">
 
-		<script type="text/javascript" src="js/lib/jquery-3.6.0.min.js" defer></script>
+		<script type="text/javascript" src="js/lib/jquery.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/jquery-ui.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/jquery.scrollbar.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/owl.carousel.min.js" defer></script>
