Fix hero images

--- a/careers.html
+++ b/careers.html
@@ -185,7 +185,7 @@
 		</div>
 
 		<div class="page-hero">
-			<img src="content/about-hero.jpg" alt="">
+			<img src="content/careers-hero.jpg" alt="">
 			<h1>Careers</h1>
 			<div class="btn-wrap"><a href="" class="btn primary">See Job Opportunities</a></div>
 
