--- a/terms.html
+++ b/terms.html
@@ -185,7 +185,7 @@
 		</div>
 
 		<div class="page-hero">
-			<img src="content/about-hero.jpg" alt="">
+			<img src="content/terms-hero.jpg" alt="">
 			<h1>Terms & Conditions</h1>
 
 			<div class="social-links-wrapper">
