--- a/investors.html
+++ b/investors.html
@@ -185,7 +185,7 @@
 		</div>
 
 		<div class="page-hero">
-			<img src="content/about-hero.jpg" alt="">
+			<img src="content/investors-hero.jpg" alt="">
 			<h1>Investors</h1>
 
 			<div class="social-links-wrapper">
