Change layout of Video and Podcast pages

--- a/article-video.html
+++ b/article-video.html
@@ -19,6 +19,7 @@
 		<script type="text/javascript" src="js/lib/jquery.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/jquery-ui.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/jquery.scrollbar.min.js" defer></script>
+		<script type="text/javascript" src="js/lib/jquery.jplayer.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/owl.carousel.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/datatables.min.js" defer></script>
 		<script type="text/javascript" src="js/main.js?v=1" defer></script>
@@ -200,12 +201,12 @@
 			</div>
 
 			<div class="video-article-content">
-				<div class="img-wrapper"><div class="play-video" data-video='{"video": "videos/1030796531-hd.mp4", "mimetype": "video/mp4"}'><img src="content/video-1.jpg" alt=""></div></div>
-
 				<div class="article-content">
 					<div class="type">Our Strategies</div>
 					<div class="date">Apr 5, 2021</div>
 					<h1>Real Estate Income Strategy</h1>
+					
+					<div class="img-wrapper"><div class="play-video" data-video='{"video": "videos/1030796531-hd.mp4", "mimetype": "video/mp4"}'><img src="content/video-1.jpg" alt=""></div></div>
 					
 					<p>Oaktree’s <a href="" class="link-underline inline">Real Estate Income</a> strategy seeks to provide stable income, with an emphasis on long-term growth and downside protection. Watch Portfolio Manager Mark Jacobs describe key elements that drive his team’s investment decisions.</p>
 				</div>
