Video play within page

--- a/article-video.html
+++ b/article-video.html
@@ -206,7 +206,7 @@
 					<div class="date">Apr 5, 2021</div>
 					<h1>Real Estate Income Strategy</h1>
 					
-					<div class="img-wrapper"><div class="play-video" data-video='{"video": "videos/1030796531-hd.mp4", "mimetype": "video/mp4"}'><img src="content/video-1.jpg" alt=""></div></div>
+					<div class="img-wrapper"><div class="play-video inline" data-video='{"video": "videos/1030796531-hd.mp4", "mimetype": "video/mp4"}'><img src="content/video-1.jpg" alt=""></div></div>
 					
 					<p>Oaktree’s <a href="" class="link-underline inline">Real Estate Income</a> strategy seeks to provide stable income, with an emphasis on long-term growth and downside protection. Watch Portfolio Manager Mark Jacobs describe key elements that drive his team’s investment decisions.</p>
 				</div>
