Memos tab in insights

--- a/insights.html
+++ b/insights.html
@@ -20,6 +20,7 @@
 		<script type="text/javascript" src="js/lib/jquery-ui.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/jquery.scrollbar.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/owl.carousel.min.js" defer></script>
+		<script type="text/javascript" src="js/lib/jquery.jplayer.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/datatables.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/ScrollMagic.min.js" defer></script>
 		<script type="text/javascript" src="js/main.js?v=1" defer></script>
@@ -504,12 +505,15 @@
 						<h5>All insights</h5>
 					</li>
 					<li data-target="#item-2">
-						<h5>Market commentary</h5>
+						<h5>Memos from howard marks</h5>
 					</li>
 					<li data-target="#item-3">
-						<h5>Education</h5>
+						<h5>Market commentary</h5>
 					</li>
 					<li data-target="#item-4">
+						<h5>Education</h5>
+					</li>
+					<li data-target="#item-5">
 						<h5>Firm News</h5>
 					</li>
 				</ul>
@@ -546,7 +550,18 @@
 							<div class="btn-wrap"><a href="" class="btn secondary">Load More</a></div>
 						</div>
 					</li>
+
 					<li id="item-2">
+						<div class="content">
+							<h2>Memo to Oaktree Clients</h2>
+							
+							<ul class="memo-items" data-items="[{&#34;archived&#34;: &#34;Archived Memos&#34;,&#34;date&#34;: &#34;apr 5, 2021&#34;,&#34;title&#34;: &#34;Coming into Focus&#34;},{&#34;archived&#34;: &#34;Archived Memos&#34;,&#34;date&#34;: &#34;apr 5, 2021&#34;,&#34;title&#34;: &#34;Time for Thinking&#34;},{&#34;archived&#34;: &#34;Archived Memos&#34;,&#34;date&#34;: &#34;apr 5, 2021&#34;,&#34;title&#34;: &#34;The Anatomy of a Rally&#34;},{&#34;archived&#34;: &#34;Archived Memos&#34;,&#34;date&#34;: &#34;apr 5, 2021&#34;,&#34;title&#34;: &#34;Not Enough&#34;},{&#34;archived&#34;: &#34;Archived Memos&#34;,&#34;date&#34;: &#34;apr 5, 2021&#34;,&#34;title&#34;: &#34;Uncertainty II&#34;},{&#34;archived&#34;: &#34;Archived Memos&#34;,&#34;date&#34;: &#34;apr 5, 2021&#34;,&#34;title&#34;: &#34;Uncertainty&#34;},{&#34;archived&#34;: &#34;Archived Memos&#34;,&#34;date&#34;: &#34;apr 5, 2021&#34;,&#34;title&#34;: &#34;Knowledge of the Future&#34;},{&#34;archived&#34;: &#34;Archived Memos&#34;,&#34;date&#34;: &#34;apr 5, 2021&#34;,&#34;title&#34;: &#34;Calibrating&#34;},{&#34;archived&#34;: &#34;Archived Memos&#34;,&#34;date&#34;: &#34;apr 5, 2021&#34;,&#34;title&#34;: &#34;Which Way Now?&#34;},{&#34;archived&#34;: &#34;Archived Memos&#34;,&#34;date&#34;: &#34;apr 5, 2021&#34;,&#34;title&#34;: &#34;Latest Update&#34;},{&#34;archived&#34;: &#34;Archived Memos&#34;,&#34;date&#34;: &#34;apr 5, 2021&#34;,&#34;title&#34;: &#34;Nobody Knows II&#34;},{&#34;archived&#34;: &#34;Archived Memos&#34;,&#34;date&#34;: &#34;apr 5, 2021&#34;,&#34;title&#34;: &#34;You Bet!&#34;}]">
+							</ul>
+						</div>
+					</li>
+
+
+					<li id="item-3">
 						<div class="content">
 							<div class="heading-row">
 								<h2>Market Commentary</h2>
@@ -581,11 +596,11 @@
 							<div class="btn-wrap"><a href="" class="btn secondary">Load More</a></div>
 						</div>
 					</li>
-					<li id="item-3">
+					<li id="item-4">
 						<div class="content">
 						</div>
 					</li>
-					<li id="item-4">
+					<li id="item-5">
 						<div class="content">
 						</div>
 					</li>
