--- a/esg.html
+++ b/esg.html
@@ -225,28 +225,81 @@
 			<div class="membership-content">
 				<h2>ESG Frameworks and Memberships</h2>
 
+				<div class="tab-list-wrap">
+					<ul class="tab-list">
+						<li data-id="item-1" class="active"><img src="content/member-pri.png" alt="" width="211" height="61"></li>
+						<li data-id="item-2"><img src="content/member-tcfd.png" alt="" width="143" height="61"></li>
+						<li data-id="item-3"><img src="content/member-bsr.png" alt="" width="120" height="61"></li>
+						<li data-id="item-4"><img src="content/member-sasb.png" alt="" width="57" height="61"></li>
+						<li data-id="item-5"><img src="content/member-gresb.png" alt="" width="88" height="61"></li>
+					</ul>
+				</div>
+
 				<div class="membership-list">
-					<div class="item active">
+					<div class="item active" id="item-1">
 						<div class="img-wrap"><img src="content/member-pri.png" alt="" width="211" height="61"></div>
-						<div class="description">In order to deepen our longstanding commitment to ESG integration in investment, Oaktree became a signatory to the United-Nations-supported <a href="https://www.unpri.org/">Principles for Responsible Investment</a> (PRI) in 2019. Oaktree’s ESG Policy and our strategy-specific ESG Integration Plans are informed by the principles set forth in the PRI.</div>
+						<div class="description">
+							<p>In order to deepen our longstanding commitment to ESG integration in investment, Oaktree became a signatory to the United-Nations-supported <a href="https://www.unpri.org/">Principles for Responsible Investment</a> (PRI) in 2019. Oaktree’s ESG Policy and our strategy-specific ESG Integration Plans are informed by the principles set forth in the PRI.</p>
+
+							<ul class="img-list">
+								<li><img src="content/member-pri.png" alt="" width="211" height="61"></li>
+								<li><img src="content/member-tcfd.png" alt="" width="143" height="61"></li>
+								<li><img src="content/member-bsr.png" alt="" width="120" height="61"></li>
+								<li><img src="content/member-sasb.png" alt="" width="57" height="61"></li>
+								<li><img src="content/member-gresb.png" alt="" width="88" height="61"></li>
+								<li><img src="content/member-pri.png" alt="" width="211" height="61"></li>
+								<li><img src="content/member-tcfd.png" alt="" width="143" height="61"></li>
+								<li><img src="content/member-bsr.png" alt="" width="120" height="61"></li>
+								<li><img src="content/member-sasb.png" alt="" width="57" height="61"></li>
+								<li><img src="content/member-gresb.png" alt="" width="88" height="61"></li>
+							</ul>
+						</div>
 					</div>
-					<div class="item">
+					<div class="item" id="item-2">
 						<div class="img-wrap"><img src="content/member-tcfd.png" alt="" width="143" height="61"></div>
-						<div class="description">Oaktree is a supporter of the <a href="https://www.fsb-tcfd.org/">Task Force on Climate-Related Financial Disclosures</a> (TCFD), which develops recommendations for effective climate-related disclosures designed to enable stakeholders to better understand their exposure to climate-related risks. We are currently assessing how to best integrate climate considerations across the firm’s operations and diversified strategies.</div>
+						<div class="description">
+							<p>Oaktree is a supporter of the <a href="https://www.fsb-tcfd.org/">Task Force on Climate-Related Financial Disclosures</a> (TCFD), which develops recommendations for effective climate-related disclosures designed to enable stakeholders to better understand their exposure to climate-related risks. We are currently assessing how to best integrate climate considerations across the firm’s operations and diversified strategies.</p>
+						</div>
 					</div>
-					<div class="item">
+					<div class="item" id="item-3">
 						<div class="img-wrap"><img src="content/member-bsr.png" alt="" width="120" height="61"></div>
-						<div class="description">Oaktree is a member of <a href="https://www.bsr.org/en/">BSR</a>, a global non-profit organization that works with a network of more than 250 member companies and other partners to build a just and sustainable world. From its offices in Asia, Europe, and North America, the nonprofit develops sustainable business strategies and solutions through consulting, research, and cross-sector collaboration.</div>
+						<div class="description">
+							<p>Oaktree is a member of <a href="https://www.bsr.org/en/">BSR</a>, a global non-profit organization that works with a network of more than 250 member companies and other partners to build a just and sustainable world. From its offices in Asia, Europe, and North America, the nonprofit develops sustainable business strategies and solutions through consulting, research, and cross-sector collaboration.</p>
+						</div>
 					</div>
-					<div class="item">
-						<div class="img-wrap"><img src="content/member-sasb.png" alt="" width="57" height="61"></div>
-						<div class="description">Oaktree leverages the Sustainability Accounting Standards Board (<a href="https://www.sasb.org/about/sasb-and-other-esg-frameworks/">SASB</a>) Standards, which enable investors to identify, evaluate and manage financially material sustainability information. The industry-specific SASB standards are modeled after financial accounting standards and designed to help inform decisions that drive long-term value creation.</div>
+					<div class="item" id="item-4">
+						<div class="img-wrap">
+							<img src="content/member-sasb.png" alt="" width="57" height="61"></div>
+						<div class="description"><p>Oaktree leverages the Sustainability Accounting Standards Board (<a href="https://www.sasb.org/about/sasb-and-other-esg-frameworks/">SASB</a>) Standards, which enable investors to identify, evaluate and manage financially material sustainability information. The industry-specific SASB standards are modeled after financial accounting standards and designed to help inform decisions that drive long-term value creation.</p>
+						</div>
 					</div>
-					<div class="item">
+					<div class="item" id="item-5">
 						<div class="img-wrap"><img src="content/member-gresb.png" alt="" width="88" height="61"></div>
-						<div class="description">Oaktree supports transparency and benchmarking of ESG performance. Accordingly, Oaktree’s Transportation Infrastructure strategy participates in <a href="https://gresb.com/">GRESB</a>, the global ESG benchmark for real assets. Oaktree’s Real Estate Income strategy is planning to participate in the GRESB Real Estate Assessment in 2022.</div>
+						<div class="description">
+							<p>Oaktree supports transparency and benchmarking of ESG performance. Accordingly, Oaktree’s Transportation Infrastructure strategy participates in <a href="https://gresb.com/">GRESB</a>, the global ESG benchmark for real assets. Oaktree’s Real Estate Income strategy is planning to participate in the GRESB Real Estate Assessment in 2022.</p>
+						</div>
 					</div>
 				</div>
+			</div>
+		</div>
+
+		<div class="two-columns-wrapper grey">
+			<div class="single-column">
+				<div class="column quote">
+					<div class="quote-text-wrap">
+						<div class="quote-symbol">"</div>
+						<div class="quote-text">When the environment is favorable for distressed debt, we have the flexibility to weight such investments more heavily. When the supply is less plentiful, we will increase purchases of non-distressed value investments."</div>
+					</div>
+					<div class="quote-author">
+						<img src="content/author-small.png" alt="">
+						<div class="inline-block">
+							<div class="name">Bruce Karsh </div>
+							<div class="position">Portfolio Manager</div>
+						</div>
+					</div>
+				</div>
+
+				
 			</div>
 		</div>
 
