Insights pages fixes

--- a/article-example.html
+++ b/article-example.html
@@ -21,6 +21,7 @@
 		<script type="text/javascript" src="js/lib/jquery.scrollbar.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/owl.carousel.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/datatables.min.js" defer></script>
+		<script type="text/javascript" src="js/lib/ScrollMagic.min.js" defer></script>
 		<script type="text/javascript" src="js/main.js?v=1" defer></script>
 
 		<link rel="shortcut icon" href="images/oaktree-fav-icon.png">
@@ -183,6 +184,8 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="trigger-top"></div>
 
 		<div class="article-wrapper">
 			<div class="navigation-wrapper">
