--- a/podcast-example.html
+++ b/podcast-example.html
@@ -23,6 +23,7 @@
 		<script type="text/javascript" src="js/lib/jquery.jplayer.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/owl.carousel.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/datatables.min.js" defer></script>
+		<script type="text/javascript" src="js/lib/ScrollMagic.min.js" defer></script>
 		<script type="text/javascript" src="js/main.js?v=1" defer></script>
 
 		<link rel="shortcut icon" href="images/oaktree-fav-icon.png">
@@ -185,6 +186,8 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="trigger-top"></div>
 
 		<div class="article-wrapper video">
 			<div class="navigation-wrapper">
