--- a/careers.html
+++ b/careers.html
@@ -8,9 +8,9 @@
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Oaktree Capital</title>
-		<link rel="stylesheet" href="css/style.css?v1"/>
 		<link rel="stylesheet" href="css/lib/owl.carousel.min.css">
 		<link rel="stylesheet" href="css/lib/owl.theme.default.min.css">
+		<link rel="stylesheet" href="css/style.css?v1"/>
 		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.typekit.net/hrc2dds.css">
 		<link rel="stylesheet" href="css/lib/jquery-ui.min.css">
@@ -456,6 +456,86 @@
 					<div class="btn-wrap">
 						<a href="" class="btn secondary">See Job Opportunities</a>
 					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="twitter-wrapper">
+			<div class="twitter-content">
+				<div class="title">
+					<h2>Tweets</h2>
+					<span class="separator"></span>
+					<a href="" class="view-all link-underline">View All</a>
+				</div>
+				<div class="twitter-container">
+				    <div class="innerContainer borderBottomLine">
+				        <div>
+				            <span class="retweeted">You Retweeted</span>
+				        </div>
+				        <div class="date">
+				        	10/07/2021
+				        </div>
+				        <div class="flexBoxSpaceBetween">
+				            <div class="fullWidth">
+				                <span class="paragraph colorBlack">
+				                    <a href="https://twitter.com/HowardMarksBook" target="_blank" class="link" title="https://twitter.com/HowardMarksBook">@HowardMarksBook</a> reflects on his memo “What Does the Market Know?” (January 19, 2016). He discusses the problems with taking advice from the market but also considers what it means when the market does get it right: <a href="https://bit.ly/3oH3OJI" target="_blank" class="link" title="bit.ly/3oH3OJI"> bit.ly/3oH3OJI</a> <a href="https://twitter.com/hashtag/OaktreeInsights?src=hashtag_click" target="_blank" class="link" title="https://twitter.com/hashtag/OaktreeInsights?src=hashtag_click">#OaktreeInsights</a> <a href="https://twitter.com/hashtag/OaktreePodcasts?src=hashtag_click" target="_blank" class="link" title="https://twitter.com/hashtag/OaktreePodcasts?src=hashtag_click">#OaktreePodcasts</a>
+				                </span>
+				            </div>
+				        </div>
+				    </div>
+				    <div class="innerContainer borderBottomLine">
+				        <div>
+				            <span class="retweeted">You Retweeted</span>
+				        </div>
+				        <div class="date">
+							10/05/2021
+				        </div>
+				        <div class="flexBoxSpaceBetween">
+				            <div class="fullWidth">
+				                <span class="paragraph colorBlack">
+				                    We're proud to have participated in the 7th edition of the <a href="https://twitter.com/hashtag/WomenInTheWorkplace?src=hashtag_click" target="_blank" class="link" title="https://twitter.com/hashtag/WomenInTheWorkplace?src=hashtag_click">#WomenInTheWorkplace</a> report, a joint effort with <a href="https://twitter.com/McKinsey" target="_blank" class="link" title="https://twitter.com/McKinsey">@McKinsey</a> &amp; Company and <a href="http://LeanIn.org" target="_blank" class="link" title="LeanIn.org"> LeanIn.org</a> , as part of our ongoing commitment to promoting <a href="https://twitter.com/hashtag/diversity?src=hashtag_click" target="_blank" class="link" title="https://twitter.com/hashtag/diversity?src=hashtag_click">#diversity</a> and <a href="https://twitter.com/hashtag/inclusion?src=hashtag_click" target="_blank" class="link" title="https://twitter.com/hashtag/inclusion?src=hashtag_click">#inclusion</a> at Oaktree. <br>
+				                    
+				                    <div class="summary-card">
+				                    	<a href="https://twitter.com/McKinsey_MGI/status/1443623449155489799" target="_blank">
+				                            <div class="img-wrap">
+				                                <div class="columnWithWidth100"><img class="circleBorder" src="https://pbs.twimg.com/media/FAjH3h4WEAgx06T.jpg:large"></div>
+				                            </div>
+				                            <div class="link-wrap">
+				                                <p class="title">Howard Marks warns of inflation, higher risk tolerance.</p>
+				                                <p class="site">twitter.com</p>
+				                            </div>
+				                        </a>
+				                    </div>
+				                </span>
+				            </div>
+				        </div>
+				    </div>
+				    <div class="innerContainer borderBottomLine">
+				        <div>
+				            <span class="retweeted">You Retweeted</span>
+				        </div>
+				        <div class="date">
+							10/01/2021
+				        </div>
+				        <div class="flexBoxSpaceBetween">
+				            <div class="fullWidth">
+				                <span class="paragraph">
+				                    Congratulations to Oaktree’s Jennifer Marques and Sophie Aldrich who have been announced as Women in Investment Awards 2021 finalists <a href="https://twitter.com/hashtag/wiia21?src=hashtag_click" target="_blank" class="link" title="https://twitter.com/hashtag/wiia21?src=hashtag_click">#wiia21</a> <br>
+				                    <div class="summary-card">
+				                    	<a href="https://twitter.com/InvestmentWeek/status/1442516698901401600" target="_blank">
+				                            <div class="img-wrap">
+				                                <div class="columnWithWidth100"><img class="circleBorder" src="https://pbs.twimg.com/media/FAjH3h4WEAgx06T.jpg:large"></div>
+				                            </div>
+				                            <div class="link-wrap">
+				                                <p class="title">Howard Marks warns of inflation, higher risk tolerance.</p>
+				                                <p class="site">twitter.com</p>
+				                            </div>
+				                        </a>
+				                    </div>
+				                </span>
+				            </div>
+				        </div>
+				    </div>
 				</div>
 			</div>
 		</div>
