--- a/login.html
+++ b/login.html
@@ -184,7 +184,7 @@
 			</div>
 		</div>
 
-		<div class="two-columns-wrapper grey">
+		<div class="two-columns-wrapper grey login">
 			<div class="two-columns">
 				<div class="column white">
 					<h1>Oaktree Client Portal Login</h1>
